--- a/android-java/CalculadoraDeSalarios/app/src/main/res/values/styles.xml
+++ b/android-java/CalculadoraDeSalarios/app/src/main/res/values/styles.xml
@@ -18,8 +18,6 @@
     </style>
 
     <style name="AppTheme.NoActionBar" parent="AppTheme">
-        <item name="android:windowActionBar">false</item>
-        <item name="android:windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowTranslucentStatus">true</item>
@@ -52,11 +50,11 @@
         <item name="titleTextColor">@color/text_dark</item>
         <item name="subtitleTextColor">@color/material_on_primary_emphasis_medium</item>
         <item name="android:textColorSecondary">@color/text_dark</item>
-        <item name="android:tint">@color/text_dark</item>
+        <item name="backgroundTint">@color/text_dark</item>
     </style>
 
     <style name="AppTheme.OverflowButtonStyle" parent="Widget.AppCompat.ActionButton.Overflow">
-        <item name="android:tint">@color/text_dark</item>
+        <item name="backgroundTint">@color/text_dark</item>
     </style>
 
 
